[package]
name = "opendht-sys"
version = "1.0.0"
edition = "2021"
authors = ["Gavin Henry <ghenry@sentrypeer.org>"]
description = "Low-level bindings to the OpenDHT C library"
categories = ["api-bindings", "network-programming", "external-ffi-bindings"]
license = "GPL-3.0"
links = "opendht-c"
repository = "https://github.com/SentryPeer/opendht-sys.git"
readme = "README.md"

[dependencies]
argon2-sys = "0.1.0"
gnutls-sys = "0.1.2"
nettle-sys = "2.3.1"
libc = "0.2.170"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.15"
cmake = "0.1.54"
pkg-config = "0.3.31"
