[package]
name = "opendht-sys"
version = "1.0.1"
edition = "2024"
authors = ["Gavin Henry <ghenry@sentrypeer.org>"]
description = "Low-level bindings to the OpenDHT C library"
categories = ["api-bindings", "network-programming", "external-ffi-bindings"]
license = "GPL-3.0"
links = "opendht-c"
repository = "https://github.com/SentryPeer/opendht-sys.git"
readme = "README.md"

# For crates.io
include = [
    "vendor/opendht/CMakeLists.txt",
    "vendor/opendht/COPYING",
    "vendor/opendht/Makefile.am",
    "vendor/opendht/README.md",
    "vendor/opendht/autogen.sh",
    "vendor/opendht/c",
    "vendor/opendht/cmake",
    "vendor/opendht/configure.ac",
    "vendor/opendht/include",
    "vendor/opendht/m4",
    "vendor/opendht/meson.build",
    "vendor/opendht/meson.options",
    "vendor/opendht/opendht-c.pc.in",
    "vendor/opendht/opendht.pc.in",
    "vendor/opendht/src",
    "**/*.rs",
    "./.gitignore",
    "./.gitmodules",
    "Cargo.toml",
    "CHANGELOG.md",
    "README.md",
    "wrapper.h"
]

[dependencies]
libc = "0.2.170"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.16"
cmake = "0.1.54"
pkg-config = "0.3.31"
